# journal

./: .platform.app.yaml  README.md  manage.py  pyproject.toml
.platform/: routes.yaml  services.yaml
accounts/: views.py
journal/: settings.py  urls.py
learning_logs/: models.py  urls.py
learning_logs/migrations/: 0001_initial.py  0003_topic_owner.py
learning_logs/templates/learning_logs/: base.html  edit_entry.html  new_topic.html
src/accounts/: urls.py
src/accounts/templates/registration/: login.html  register.html
src/journal/: settings.py  urls.py
src/learning_logs/: models.py  urls.py  views.py
src/learning_logs/migrations/: 0001_initial.py  0002_entry.py
src/learning_logs/templates/learning_logs/: base.html  edit_entry.html  index.html  new_entry.html  new_topic.html  topic.html  topics.html
templates/: 500.html
