[project]
name = "journal"
requires-python = ">=3.10"
version = "0.1.0"
description = "Journaling Web App using Django"
authors = [{ name = "Nabil Khalil", email = "nabilamirkhalil@gmail.com" }]
readme = "README.md"
dependencies = [
    "django (>=5.1.6,<6.0.0)",
    "django-bootstrap5 (>=25.1,<26.0)",
    "platformshconfig (>=2.4.0,<3.0.0)"
]

[tool.poetry.group.dev.dependencies]
ruff = ">=0.9"

[tool.poetry.group.deployment.dependencies]
gunicorn = "^23.0.0"
psycopg2-binary = "^2.9.10"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
